[project]
name = "runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.37.7",
    "kaleido==0.2.1",
    "langfuse>=2.59.7",
    "openai>=1.65.5",
    "pandas>=2.1.4",
    "pycaret>=3.3.2",
    "python-dotenv>=1.0.1",
    "s3fs>=0.4.2",
    "scikit-learn>=1.4.2",
    "streamlit>=1.43.1",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
